--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donald DOPE (DOPE)</title>
+    <title>Donald Pepe (DOPE)</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -27,17 +27,21 @@
       </div>
 
       <div class="main_right_side">
-        <h1 style="color: rgb(3, 199, 3)">$DOPE</h1>
+        <h1 style="color: rgb(3, 199, 3)">Donald Pepe</h1>
         <p>
-          DOPE Token is a unique and innovative cryptocurrency that brings a
-          touch of whimsy to the world of blockchain.
+          Dive into the world of crypto like never before with Donald Pepe Meme
+          Coin – where finance meets irreverent humor at the crossroads of
+          blockchain technology.
         </p>
         <p>
-          Inspired by the iconic internet meme 'DOPE the Frog,' DOPE Token
-          combines humor with the power of decentralized finance.
+          Unleash the power of meme magic fused with the audacity of
+          decentralized finance, capturing the spirit of our times with a wink
+          and a nod.
         </p>
         <div class="btns_container">
-          <a target="_blank" href="buylink" class="btn">BUY NOW</a>
+          <a target="_blank" href="buylink" class="btn" style="color: #fff"
+            >BUY NOW</a
+          >
         </div>
       </div>
     </main>
@@ -74,13 +78,16 @@
           </h1>
         </div>
         <p>
-          DOPE Token represents a digital collectible, allowing users to buy,
-          sell, and trade these quirky tokens in a secure and transparent
-          manner. The creators behind DOPE Token have crafted a community-driven
-          project, fostering a sense of camaraderie among crypto enthusiasts and
-          meme lovers alike. Embrace the spirit of the internet in the
-          decentralized realm with DOPE Token, where laughter and innovation
-          converge in the exciting landscape of cryptocurrency."
+          At the heart of the digital currency revolution, Donald Pepe Meme Coin
+          stands as a beacon of innovation and jest, embodying the spirit of
+          freedom and fun that blockchain technology promises. Born from the
+          vibrant culture of internet memes and inspired by the legendary
+          figures of Donald and Pepe, our coin is more than just a
+          cryptocurrency – it's a movement. A movement that celebrates the
+          quirky, the unexpected, and the power of community in the digital age.
+          Our mission is to democratize finance with a smile, making investing
+          accessible, entertaining, and potentially rewarding for people from
+          all walks of life.
         </p>
         <div class="ss_left_side_btns">
           <a href="tglink">TELEGRAM</a>
@@ -186,7 +193,7 @@
                 <div id="dexscreener-embed">
                   <iframe
                     style="max-width: 580px; width: 98%; height: 500px"
-                    src="https://dexscreener.com/solana/ApP9oTmA3ag7YjsiMihpmkYnRksXgkqmStQsN9r1jymU"
+                    src="https://dexscreener.com/solana/xxxxxxxxxxxxxxxxxx"
                   ></iframe>
                 </div>
               </div>
@@ -206,7 +213,7 @@
           1 SOL starting LP as well as NO taxes to make it whale friendly!
         </p>
         <strong>Contract Address</strong>
-        <p>ApP9oTmA3ag7YjsiMihpmkYnRksXgkqmStQsN9r1jymU</p>
+        <p>xxxxxxxxxxxxxxxxxx</p>
         <strong>Total Supply</strong>
         <p>1,000,000,000,000</p>
         <strong>Taxes</strong>
